<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="147dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:autoLink="web"
            android:fontFamily="sans-serif-medium"
            android:linksClickable="true"
            android:padding="8dp"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/facebook"
                android:onClick="facebook"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/twitter"
                android:onClick="twitter"
                android:src="@drawable/ic_twitter_logo" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/github"
                android:onClick="github"
                android:src="@drawable/ic_github" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>