<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="8dp"
        android:onClick="calculate"
        android:padding="12dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pepble_count" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="8dp"
        android:onClick="clear"
        android:padding="12dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pepble_count" />

    <EditText
        android:id="@+id/et_pricae"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et_shape"
        android:inputType="numberDecimal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        android:text="@string/charger_price"
        android:textColor="@color/primary_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_pricae"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="26dp"
        android:padding="16dp"
        android:layout_margin="8dp"
        android:text="@string/result"
        android:background="@drawable/tv_shape"
        android:textColor="@color/primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/calculate"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />

    <EditText
        android:id="@+id/et_pepble_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:gravity="center"
        android:background="@drawable/et_shape"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_in_hand"
        app:layout_constraintTop_toTopOf="@+id/et_in_hand" />

    <TextView
        android:id="@+id/people_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:padding="4dp"
        android:text="@string/passenger_count"
        android:textColor="@color/primary_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_pepble_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/in_hand" />

    <EditText
        android:id="@+id/et_in_hand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:background="@drawable/et_shape"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/et_pepble_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_hand" />

    <TextView
        android:id="@+id/in_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:padding="4dp"
        android:text="@string/cash_in_your_hand"
        android:textColor="@color/primary_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/people_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pricae" />


</androidx.constraintlayout.widget.ConstraintLayout>