<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:elevation="15dp"
    app:cardElevation="15dp"
    android:padding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/do_you_want_to_exit"
            android:padding="4dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/no_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/primary_dark"
                android:text="@string/no"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/yes"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>